# Shockwave-Trader

./: .env.example  .gitignore  README.md  demo.sh  main.py  pyproject.toml
docs/: ARCHITECTURE.md  COLLECTORS.md  DEMO-TRANSCRIPT.md  EXECUTION.md  ONBOARDING.md  ROADMAP.md  STRATEGY-01-ENERGY-SHOCK.md  USERS.md
scripts/: list_telegram_chats.py
src/arbiter/: __init__.py
src/arbiter/collectors/: __init__.py  base.py  discord_collector.py  eia_collector.py  fred_collector.py  gdelt_collector.py  telegram_collector.py  yfinance_collector.py
src/arbiter/config/: settings.py
src/arbiter/delta/: __init__.py  compute.py  state.py
src/arbiter/execution/: __init__.py  client.py  order_executor.py  paper_client.py  positions.py  public_client.py
src/arbiter/llm/: __init__.py  openai_advisor.py
src/arbiter/notifications/: __init__.py  discord.py
src/arbiter/scheduler/: daemon.py
src/arbiter/signals/: risk.py
src/arbiter/storage/: __init__.py  trade_log.py
src/arbiter/strategies/: __init__.py
src/arbiter/strategies/energy_shock/: __init__.py  config.yaml  decision.py  state.py  strategy.py
tests/: test_collectors.py  test_delta.py  test_energy_shock_decision.py  test_errors.py  test_openai_advisor.py  test_order_executor.py  test_paper_client.py  test_public_client.py  test_trade_log.py
